syntax = "proto3";
package gppn.v1;

// Currency representation supporting fiat, crypto, and custom tokens.
enum CurrencyType {
  CURRENCY_TYPE_UNSPECIFIED = 0;
  CURRENCY_TYPE_FIAT = 1;
  CURRENCY_TYPE_CRYPTO = 2;
  CURRENCY_TYPE_CUSTOM = 3;
}

message Currency {
  CurrencyType currency_type = 1;
  string code = 2;           // ISO 4217 for fiat (BRL, USD, EUR) or symbol for crypto (BTC, ETH, USDC)
  uint32 decimals = 3;       // Number of decimal places (e.g., 2 for BRL, 8 for BTC, 18 for ETH)
}

message Amount {
  uint64 value_high = 1;     // High 64 bits of u128 value in atomic units
  uint64 value_low = 2;      // Low 64 bits of u128 value in atomic units
  Currency currency = 3;
}

// Settlement preference for routing
message SettlementHint {
  string adapter_id = 1;     // e.g., "sa-ethereum", "sa-pix", "sa-internal"
  uint32 priority = 2;       // 0 = highest priority
  map<string, string> params = 3;
}

// Condition types for conditional payments
enum ConditionType {
  CONDITION_TYPE_UNSPECIFIED = 0;
  CONDITION_TYPE_TIME_EXPIRY = 1;
  CONDITION_TYPE_HASHLOCK = 2;
  CONDITION_TYPE_MULTISIG = 3;
  CONDITION_TYPE_ESCROW = 4;
}

message Condition {
  ConditionType condition_type = 1;
  bytes params = 2;
}

// Routing hint to guide path discovery
message RoutingHint {
  string target_did = 1;
  repeated string preferred_adapters = 2;
  uint32 max_hops = 3;
}

// Payment state machine: 8 states
enum PaymentState {
  PAYMENT_STATE_UNSPECIFIED = 0;
  PAYMENT_STATE_CREATED = 1;
  PAYMENT_STATE_ROUTED = 2;
  PAYMENT_STATE_ACCEPTED = 3;
  PAYMENT_STATE_SETTLING = 4;
  PAYMENT_STATE_SETTLED = 5;     // Final
  PAYMENT_STATE_FAILED = 6;
  PAYMENT_STATE_EXPIRED = 7;     // Final
  PAYMENT_STATE_CANCELLED = 8;   // Final
}

// The core Payment Message â€” the fundamental unit of the GPPN protocol.
message PaymentMessage {
  bytes pm_id = 1;                            // UUID v7 (16 bytes, timestamp-based)
  uint32 version = 2;                         // Protocol version (1)
  string sender_did = 3;                      // DID of the sender
  string receiver_did = 4;                    // DID of the receiver
  Amount amount = 5;                          // Payment amount
  repeated SettlementHint settlement_preferences = 6;
  repeated Condition conditions = 7;
  bytes metadata = 8;                         // Encrypted metadata (opaque to relays)
  uint32 ttl = 9;                             // Time-to-live in seconds
  uint64 timestamp = 10;                      // Unix millis when created
  bytes signature = 11;                       // Ed25519 signature over signing payload
  repeated RoutingHint routing_hints = 12;
  PaymentState state = 13;
}
